# copier-rye

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  copier.yml  extensions.py  justfile  max1.json  pyproject.toml
src/project/: .pre-commit-config.yaml.jinja  CHANGELOG.md  CONTRIBUTING.md.jinja  README.md.jinja  devdeps.txt.jinja  justfile  pyproject.toml.jinja
src/project/.github/ISSUE_TEMPLATE/: bug_report.md.jinja  feature_request.md.jinja
src/project/.github/workflows/: ci.yml  ci.yml.jinja
src/project/docs/: mkdocs.yml.jinja
src/project/docs/docs/: index.md.jinja
src/project/src/: __init__.py
src/project/src/{{python_package_import_name}}/utils/: log.py.jinja  run.py.jinja
