[project]
name = "copier-rye"
version = "0.1.0"
description = "A Copier template that uses Rye"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "montanarograziano", email = "graziano.montanaro98@gmail.com" }
]
requires-python = "~= 3.10"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
]

[build-system]
build-backend = "hatchling.build"
requires = [
  "hatchling",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/copier_rye"]

[tool.rye]
managed = true
dev-dependencies = [
    "jinja2>=3.1.3",
    "pytest>=8.1.1",
    "deptry>=0.14.2",
    "mypy>=1.9.0",
    "validate-pyproject>=0.16",
    "pyproject-fmt>=1.7.0",
    "pre-commit>=3.6.2",
    "regex>=2023.12.25",
    "black>=24.3.0",
    "cffi>=1.16.0",
    "commitizen>=3.20.0",
    "mkdocstrings>=0.24.1",
    "mkdocstrings-python>=1.9.0",
    "mkdocs-macros-plugin>=1.0.5",
    "mkdocs-material[imaging]>=9.5.14",
    "pytest-cov>=4.1.0",
    "ipykernel>=6.29.3",
    "blacken-docs>=1.16.0",
    "ruff>=0.3.4",
]

[tool.rye.scripts]
c = {cmd = "rye run cz commit"}
commit = {cmd = "rye run cz commit"}
check = {cmd = "git add . && rye run pre-commit run"}
docs = {cmd = "rye run mkdocs serve --config-file=docs/mkdocs.yml"}
set-default-doc-version = {cmd = "rye run mike set-default latest"}
preview-docs = {cmd = "rye run mike serve --config-file=docs/mkdocs.yml"}
test = {cmd = "rye run pytest --cov=src/ --cov-report=term-missing --cov-report=html --disable-warnings"}

update-hooks = {cmd = "rye run pre-commit install-hooks && rye run pre-commmit autoupdate"}
format = {cmd = "rye run blacken-docs -- src/**/*.py tests/*.py && rye run ruff format --src tests && rye run ruff check --select=I001 --fix src tests"}
lint = {cmd = "rye run ruff chceck -- src tests"}
typecheck = {cmd = "rye run mypy -- src tests"}
audit = {cmd = "rye run pip-audit && rye run deptry --src tests"}
check-bump = {cmd = "rye run cz bump --dry-run"}
pre-release = {chain = ["format", "lint", "typecheck", "audit", "check-bump"]}
bump = {cmd = "rye run cz bump"}
push-tag = {cmd = "git push && git push --tag"}
release = {chain = ["format", "audit", "lint", "typecheck", "bump", "push-tag"]}
